Fix merge conflict

--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -8,7 +8,7 @@
     itemprop="mainContentOfPage" itemscope itemtype="@article.schemaType" role="main">
 
     <header class="article__head">
-        <div class="">
+        <div>
             @fragments.dateline(article.webPublicationDate, article.isLive)
             @fragments.headline(article.headline)
         </div>
