--- a/common/app/views/fragments/headline.scala.html
+++ b/common/app/views/fragments/headline.scala.html
@@ -1,2 +1,9 @@
 @(headline: String, classes: List[String] = Nil)(implicit request: RequestHeader)
-<h1 itemprop="headline" class="article-headline @if(classes.nonEmpty){ @classes.mkString(" ")}">@Html(headline)</h1>
+
+@charRange(str: String) = @{
+    if (str.length <= 30) "small"
+    else if (str.length <= 60) "medium"
+    else "large"
+}
+
+<h1 itemprop="headline" class="article-headline chars-@charRange(headline) @if(classes.nonEmpty){ @classes.mkString(" ")}">@Html(headline)</h1>
