--- a/common/app/views/fragments/headline.scala.html
+++ b/common/app/views/fragments/headline.scala.html
@@ -6,4 +6,4 @@
     else "large"
 }
 
-<h1 itemprop="headline" class="article-headline chars-@charRange(headline) @if(classes.nonEmpty){ @classes.mkString(" ")}">@Html(headline)</h1>
+<h1 itemprop="headline" class="article__headline chars-@charRange(headline) @if(classes.nonEmpty){ @classes.mkString(" ")}">@Html(headline)</h1>
