sections subs border to match CTA

--- a/common/app/assets/stylesheets/module/headers/_section.scss
+++ b/common/app/assets/stylesheets/module/headers/_section.scss
@@ -54,5 +54,5 @@
 .section-head--sub {
   border-top: 5px solid $neutral2;
   margin-bottom: 5px;
-  border-bottom: 1px solid $neutral10;
+  border-bottom: 1px dotted $neutral3;
 }
