--- a/common/app/assets/stylesheets/module/trails/_trail.scss
+++ b/common/app/assets/stylesheets/module/trails/_trail.scss
@@ -10,6 +10,7 @@
 
     .trail:last-child {
         border-bottom: none;
+        padding-bottom: 12px;
     }
 
     .trail:first-child:last-child {
