--- a/football/app/views/fragments/frontTableBlock.scala.html
+++ b/football/app/views/fragments/frontTableBlock.scala.html
@@ -1,6 +1,6 @@
 @(table: Table, highlightTeamId: Option[String] = None)
 
-<li id="front-competition-table" class="competition-table--front" data-link-name="front table">
+<li id="front-competition-table" class="trail competition-table--front" data-link-name="front table">
     <p class="relative-timestamp type-11 front-timestamp">
         <i class="i i-date"></i>
         <span>Last updated: a minute ago</span>
