--- a/football/app/views/fragments/matchStats.scala.html
+++ b/football/app/views/fragments/matchStats.scala.html
@@ -42,7 +42,7 @@
 }
 
 @team(players: Seq[LineUpPlayer]) = {
-    <ul class="team-list unstyled">
+    <ul class="team-list">
         @players.map{ player =>
         <li class="team-list__item">
             @player.name
