Fixes SVG caption icon (apparantely SVG doesn't work in ::before)

--- a/common/app/views/fragments/img.scala.html
+++ b/common/app/views/fragments/img.scala.html
@@ -10,6 +10,8 @@
         alt="@StripHtmlTags(mainPicture.altText.getOrElse(""))"
         title="@StripHtmlTags(mainPicture.caption.getOrElse(""))" />
     @if(smallCrop.caption.headOption.getOrElse("").trim != "") {
-    <figcaption class="main-caption" itemprop="description">@Html(smallCrop.caption.getOrElse(""))</figcaption>
+    <figcaption class="main-caption" itemprop="description">
+        <i class="i i-image"></i>
+        @Html(smallCrop.caption.getOrElse(""))</figcaption>
     }
 </figure>
