--- a/common/app/views/fragments/autoUpdate.scala.html
+++ b/common/app/views/fragments/autoUpdate.scala.html
@@ -1,2 +1,3 @@
-<div class="update hidden" data-link-name="autoupdate">
+<div class="update--wrapper">
+    <div class="update hidden" data-link-name="autoupdate"></div>
 </div>
