--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -186,6 +186,16 @@ video {
 /* 10 Cols
  ========================================================================== */
 @media screen and (min-width: 50em) {
+    .article figure {
+        width: $gridWidth * 6;
+        margin-right: $gridWidth * -3;
+    }
+}
+
+/* 11 Cols
+ ========================================================================== */
+@media screen and (min-width: 55em) {
+
     .page-head {
         border-bottom: 0;
     }
@@ -217,15 +227,14 @@ video {
     .article figure,
     .article__body,
     .update--wrapper {
-        width: $gridWidth * 5;
         float: right;
         padding: 0 10px;
         margin: 15px 0 0 0;
     }
+
     .byline {
         margin-left: 0;
     }
-
 
     .inline-image {
         img, figcaption {
@@ -233,21 +242,16 @@ video {
         }
     }
 
-    .article figure,
     .article__body,
     .update--wrapper {
         width: $gridWidth * 6;
     }
-}
 
-/* 11 Cols
- ========================================================================== */
-@media screen and (min-width: 55em) {
-    .article figure,
-    video {
+    .article figure {
         width: $gridWidth * 7;
     }
 
+    /* ************** */
     .article .article__body figure {
         width: $gridWidth * 6;
         margin-right: 0;
