--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -100,12 +100,8 @@ video {
     @extend .cf;
 }
 
-.article figure {
+.main-media {
     @extend .grid-box-centered;
-}
-
-.article .article__body figure {
-    padding: 5px 0 7px 0;
 }
 
 .article__standfirst {
@@ -124,7 +120,7 @@ video {
     font-weight: bold;
 }
 
-.article figure,
+.main-media,
 .article__byline,
 .article__body,
 video {
@@ -138,14 +134,10 @@ video {
 /* 6 Cols
  ========================================================================== */
 @media screen and (min-width: 6 * $gridWidth) {
-    .article figure {
+    .main-media {
         width: $gridWidth * 3;
         float: right;
         background-color: #fff;
-    }
-
-    .article .article__body figure {
-        padding: 5px 0 7px 20px;
     }
 
     .article__byline {
@@ -161,7 +153,7 @@ video {
 /* 7 Cols
  ========================================================================== */
 @media screen and (min-width: 35em) {
-    .article figure {
+    .main-media {
         width: $gridWidth * 4;
     }
 }
@@ -169,7 +161,7 @@ video {
 /* 8 Cols
  ========================================================================== */
 @media screen and (min-width: 40em) {
-    .article figure {
+    .main-media {
         margin-right: $gridWidth * -1;
     }
     .article__byline {
@@ -183,7 +175,7 @@ video {
 /* 9 Cols
  ========================================================================== */
 @media screen and (min-width: 45em) {
-    .article figure {
+    .main-media {
         width: $gridWidth * 5;
         margin-right: $gridWidth * -2;
     }
@@ -192,7 +184,7 @@ video {
 /* 10 Cols
  ========================================================================== */
 @media screen and (min-width: 50em) {
-    .article figure {
+    .main-media {
         width: $gridWidth * 6;
         margin-right: $gridWidth * -3;
     }
@@ -230,7 +222,7 @@ video {
         padding: 0 $baseLRpad;
     }
 
-    .article figure,
+    .main-media,
     .article__body,
     .update--wrapper {
         float: right;
@@ -252,14 +244,8 @@ video {
         width: $gridWidth * 6;
     }
 
-    .article figure {
+    .main-media {
         width: $gridWidth * 7;
-    }
-
-    /* ************** */
-    .article .article__body figure {
-        width: $gridWidth * 6;
-        margin-right: 0;
     }
 
     .article__body,
@@ -271,13 +257,9 @@ video {
 /* 12 Cols
  ========================================================================== */
 @media screen and (min-width: 60em) {
-    .article figure,
+    .main-media,
     video {
         width: $gridWidth * 8;
-    }
-
-    .article .article__body figure {
-        width: $gridWidth * 7;
     }
 
     .article__body,
@@ -289,7 +271,7 @@ video {
 /* 13 Cols
  ========================================================================== */
 @media screen and (min-width: 65em) {
-    .article figure,
+    .main-media,
     video {
         margin-right: $gridWidth * 1;
     }
@@ -303,25 +285,14 @@ video {
 /* 14 Cols
  ========================================================================== */
 @media screen and (min-width: 70em) {
-    .article figure {
+    .main-media {
         width: $gridWidth * 9;
-    }
-
-    .article .article__body figure {
-        width: $gridWidth * 7;
     }
 
     .article__body,
     .update--wrapper {
         margin-right: $gridWidth * 3;
     }
-    /*
-    .article__head,
-    .article__byline,
-    .social {
-        margin-left: $gridWidth * 1 !important;
-    }
-    */
 }
 
 /* Article headline */
