--- a/common/app/views/fragments/img.scala.html
+++ b/common/app/views/fragments/img.scala.html
@@ -12,6 +12,7 @@
     @if(smallCrop.caption.headOption.getOrElse("").trim != "") {
     <figcaption class="main-caption" itemprop="description">
         <i class="i i-image"></i>
-        @Html(smallCrop.caption.getOrElse(""))</figcaption>
+        <b>@Html(smallCrop.caption.getOrElse(""))</b>
+    </figcaption>
     }
 </figure>
