--- a/common/app/assets/stylesheets/_mixins.scss
+++ b/common/app/assets/stylesheets/_mixins.scss
@@ -1,10 +1,14 @@
 //Output based on body font-size being 10px
-@mixin font($family, $weight, $size, $line-height) {
+@mixin font($family, $weight, $size, $line-height, $antialias: false) {
     font-family: $family;
     font-size: $size*1px;
     font-size: ($size / 10)*1rem;
     font-weight: $weight;
     line-height: ($line-height / 10)*1rem;
+
+    @if $antialias {
+        -webkit-font-smoothing: antialiased;
+    }
 }
 
 @mixin box-sizing($box) {
